--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
