--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.2.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
