--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.2.0",
-    "vite": "^6.2.0",
-    "@vitejs/plugin-react": "^4.3.4"
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
